# ArthasDonationsBot

./: README.md  configure.sh  pyproject.toml  requirements.txt  run.sh  twitchbot.service
arthas/: config.py  main.py  test_donate_detection.py
arthas/utils/: arthas_bot.py  donates_detector.py  donates_detector_utils.py  file_storage.py  stream_video.py  telegram_chat_bot.py  timeout_watcher.py  twitch_api.py  twitch_irc_monitor.py  twitch_stream_monitor.py  youtube_api.py  youtube_stream_monitor.py
arthas/utils/streamer_monitor/: __init__.py
src/: config.py  main.py
src/utils/: donates_detector.py  file_storage.py  telegram_chat_bot.py  twitch_irc_monitor.py  twitch_stream_monitor.py  twitch_stream_video.py
stubs/: cv2.pyi  wrapt.pyi
